[package]
name = "flannel-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcd-client = "0.12.1"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
ipnetwork = "0.20.0"
nix = { version = "0.27.1", features = ["ioctl"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
netlink-ng = { path = "../netlink-ng" }
clap = { version = "4.4.8", features = ["derive"] }
regex = "1.10.2"
rand = "0.8.5"
async-trait = "0.1.74"
bytes = "1.5.0"
